@@ -1,3 +1,8 @@
+2005-09-26  Ross Burton  <ross@burtonini.com>
+
+	* src/doc-generator.c:
+	Cast strings to xmlChar*.
+
 2005-09-24  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
